# osm2you

./: .gitignore  .pre-commit-config.yaml  README.md  pytest.ini  requirements.txt
backend/: Dockerfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/api/: api_info.py  permissions.py  serializers.py  urls.py  validators.py  viewsets.py
backend/api/serializers/: markers.py  stories.py  tags.py  users.py
backend/api/viewsets/: markers.py  stories.py  tags.py
backend/app/admin/: __init__.py  users.py
backend/app/forms/: users.py
backend/app/managers/: users.py
backend/app/models/: __init__.py  users.py
backend/core/: apps.py  debug_func.py  permissions.py  tasks.py
backend/core/admin/: __init__.py  kinds.py  markers.py  stories.py  tags.py  users.py
backend/core/forms/: users.py
backend/core/managers/: marker_cluster.py  marker_clusters.py  markers_mainer.py  nodes_to_markers_updater.py
backend/core/migrations/: 0001_initial.py  0002_markercluster_updatedmarkercluster_marker.py  0003_kind_kindgroup_markerkind_tag_tagvalue_and_more.py  0004_story_story_text_min_length.py  0005_relatedmarkerscrap.py  0006_rename_marker_id_relatedmarkerscrap_marker.py  0007_relatedmarkerscrap_pack_index.py  0008_marker_kind_alter_markerkind_kind_and_more.py  0009_delete_markerkind.py  0010_marker_core_marker_locatio_8b2fb2_idx.py  0011_marker_core_marker_kind_id_3f8db5_idx.py
backend/core/models/: __init__.py  create.py  kinds.py  marker_kind.py  markers.py  stories.py  tag_values.py  tags.py  users.py
backend/core/services/: bbox_square.py  kinds.py  marker_cluster.py  marker_clusters.py  markers.py  overpass.py  related_markers.py  related_markes_scrap.py  scrape.py  storage.py  tags.py  users.py
backend/core/utils/: filldb.py
backend/fixtures/: kind.json  kind_group.json  tag.json
backend/markers/: admin.py  models.py  tasks.py
backend/markers/migrations/: 0001_initial.py  0002_marker_author.py  0003_marker_add_date.py  0004_alter_marker_location.py  0005_alter_marker_name.py  0006_marker_osm_id.py  0007_markercluster.py  0008_alter_markercluster_markers_count_and_more.py  0009_remove_markercluster_zoom_markercluster_square_size.py  0010_updatedmarkercluster.py  0011_remove_updatedmarkercluster_markercluster_ptr_and_more.py  0012_markercluster_updatedmarkercluster.py  0013_marker_kind.py  0014_alter_marker_kind.py  0015_remove_marker_kind.py  0016_markerkindgroup.py  0017_delete_markerkindgroup.py
backend/mymap/: settings.py  urls.py  wsgi.py
backend/osm2you/: asgi.py  celery.py  settings.py  tastks.py  urls.py  wsgi.py
backend/scripts/: entrypoint.sh  startback.sh  startflower.sh
backend/stories/: models.py
backend/stories/migrations/: 0001_initial.py  0002_remove_story_image.py  0003_alter_story_created.py  0004_alter_story_marker.py  0005_remove_story_author_remove_story_text.py  0006_story_author_story_text.py  0007_story_text_min_length.py
backend/tags/: admin.py  models.py
backend/tags/migrations/: 0001_initial.py  0002_alter_tag_name.py  0002_kindgroup.py  0003_alter_kindgroup_options.py  0003_alter_tag_options_tag_name_min_length.py  0004_kind_kind_unique_kind_tag.py  0004_tagvalue_tagvalue_value_min_length.py  0005_markerkind_markerkind_unique_kind_marker_value.py  0005_tagvalue_unique_marker_tag.py  0006_remove_markerkind_unique_kind_marker_value_and_more.py  0007_kind_kind_class.py  0008_alter_kind_kind_class.py  0009_kind_priority.py  (+2 more)
backend/tests/: conftest.py  django_test_settings.py  test_00_django-settings.py  test_13_settings.py  test_mymap-settings.py  test_mymap-urls.py  test_user_admin.py  test_users_admin_forms.py  test_users_managers.py  test_users_models.py  test_users_serializer.py
backend/users/: models.py  serializers.py
backend_trip/: config.py  database.py  pyproject.toml
backend_trip/app/: database.py  main.py
backend_trip/dao/: base.py
backend_trip/migrations/: env.py
backend_trip/trip/: dao.py  models.py
osmmainer/: README.md  pyproject.toml  run.py
osmmainer/app/: db.py  mainer.py  overpass.py  scrap.py
osmmainer/config/: config.py
trip_backend/: README.md  alembic.ini  pyproject.toml
trip_backend/app/: main.py
trip_backend/migrations/: env.py
(+303 files in other folders)
