[tool.poetry]
name = "osm2you"
version = "0.1.0"
description = "Backend server osm2you on Django 4, DRF"
authors = ["Pavel <web2cap@gmail.com>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.7.2"
coverage = "7.3.2"
django = "4.2.5"
django-cors-headers = "4.2.0"
django-filter = "23.3"
djangorestframework = "3.14.0"
djangorestframework-gis = "1.0"
djangorestframework-simplejwt = "5.3.0"
djoser = "2.2.0"
drf-yasg = "1.21.7"
psycopg2-binary = "^2.9.9"
pytest = "7.4.2"
pytest-django = "4.5.2"
python-dotenv = "1.0.0"
pytz = "2023.3.post1"
sqlparse = "0.4.4"
pre-commit = "^3.5.0"
gunicorn = "^21.2.0"
tzdata = "^2023.3"
bs4 = "^0.0.1"
lxml = "^4.9.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
