[tool.poetry]
name = "backend-trip"
version = "0.1.0"
description = ""
authors = ["web2cap <web2cap@gmail.com>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.0"}
python-jose = "^3.3.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.35"
gunicorn = "^23.0.0"
alembic = "^1.13.3"
greenlet = "^3.1.1"
fastapi-versioning = "^0.10.0"
geoalchemy2 = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["migrations", "__pycache__"]
select = ["E", "F", "I", "B", "A"]